splunk/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: splunk
  labels:
    name: splunk
