splunk/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splunk
  namespace: splunk
spec:  
  replicas: 1
  selector:
      matchLabels:
        app: splunk
  template:
    metadata:
      labels:
        app: splunk
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: splunk
        image: registry/splunk/splunk:latest
        ports:
        - containerPort: 8000
          name: http
        imagePullPolicy: Always
        volumeMounts:
        - name: splunk-etc-persistent-storage
          mountPath: /opt/splunk/etc
        - name: splunk-var-persistent-storage
          mountPath: /opt/splunk/var
      volumes:
      - name: splunk-etc-persistent-storage
        persistentVolumeClaim:
          claimName: splunk-etc-pv-claim
      - name: splunk-var-persistent-storage
        persistentVolumeClaim:
          claimName: splunk-var-pv-claim
